# server/routes/board.go
@@ -14,7 +14,59 @@ import (
 	"github.com/labstack/gommon/log"
 )
 
+// swagger:response multi-board-response
+type GetBoardsResponse []types.Board
+
+// swagger:parameters board board-retrieve-one
+type GetBoardRequest struct {
+	// UUID of board
+	//
+	// in: path
+	// required: true
+	Board_GID string `param:"board_gid"`
+}
+
+// swagger:response single-board-response
+type GetBoardResponse types.Board
+
+// swagger:parameters board board-update
+type UpdateBoardRequest struct {
+	// UUID of board
+	//
+	// in: path
+	// required: true
+	Board_GID string `param:"board_gid"`
+
+	// Title of board
+	//
+	// in: body
+	Title string `form:"title"`
+}
+
+// swagger:parameters board board-delete
+type DeleteBoardRequest struct {
+	// UUID of board
+	//
+	// in: path
+	// required: true
+	Board_GID string `param:"board_gid"`
+}
+
+// swagger:route GET /api/board board board-retrieve-all
+//
+// Retrieves all boards
+//
+// Security:
+// - Bearer: []
+//
+// Responses:
+//   200: multi-board-response
+//   400: error-response
 func GetBoards(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Body.Code = "get_boards_failed"
+	e.Body.Message = "Failed to retrieve boards"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberGid := claims["gid"].(string)
@@ -22,106 +74,147 @@ func GetBoards(c echo.Context, log *log.Logger) error {
 	boards, err := retrieveAllBoards(memberGid)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_boards_failed",
-			"message": "Failed to retrieve boards",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, boards)
 }
 
+// swagger:route GET /api/board/{Board_GID} board board-retrieve-one
+//
+// Retrieves board by UUID
+//
+// Security:
+// - Bearer: []
+//
+// Responses:
+//   200: single-board-response
+//   400: error-response
 func GetBoardById(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Body.Code = "get_board_failed"
+	e.Body.Message = "Failed to retrieve board"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
-	memberGid := claims["gid"].(string)
 
-	boardGid := c.Param("board_gid")
+	params := new(GetBoardRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
 
-	hasPermission, err := auth.VerifyBoardPermission(memberId, boardGid, auth.VIEW_PERM)
+	hasPermission, err := auth.VerifyBoardPermission(memberId, params.Board_GID, auth.VIEW_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_board_failed",
-			"message": "Failed to update board",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to update board",
-		})
+		e.Body.Code = "invalid_permission"
+		e.Body.Message = "Invalid permissions to retrieve board"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	board, err := retrieveBoardByGid(memberGid, boardGid)
+	board, err := retrieveBoardByGid(params.Board_GID)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "get_board_failed",
-			"message": "Failed to retrieve board",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, board)
 }
 
+// swagger:route PUT /api/board/{Board_GID} board board-update
+//
+// Updates board by UUID
+//
+// Security:
+// - Bearer: []
+//
+// Responses:
+//   200: single-board-response
+//   400: error-response
 func EditBoard(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Body.Code = "update_board_failed"
+	e.Body.Message = "Failed to update board"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	title := strings.TrimSpace(c.FormValue("title"))
-	boardGid := c.Param("board_gid")
+	params := new(UpdateBoardRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
+	cleanBoardData(params)
 
-	hasPermission, err := auth.VerifyBoardPermission(memberId, boardGid, auth.OWNER_PERM)
+	hasPermission, err := auth.VerifyBoardPermission(memberId, params.Board_GID, auth.OWNER_PERM)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_board_failed",
-			"message": "Failed to update board",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	if !hasPermission {
-		return c.JSON(http.StatusForbidden, map[string]string{
-			"code":    "invalid_permission",
-			"message": "Invalid permissions to update board",
-		})
+		e.Body.Code = "invalid_permission"
+		e.Body.Message = "Invalid permissions to update board"
+		return c.JSON(http.StatusForbidden, e)
 	}
 
-	board, err := updateBoard(boardGid, title)
+	board, err := updateBoard(params)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "update_board_failed",
-			"message": "Failed to update board",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusOK, board)
 }
 
+// swagger:route POST /api/board board board-create
+//
+// Creates a board
+//
+// Security:
+// - Bearer: []
+//
+// Responses:
+//   200: single-board-response
+//   400: error-response
 func CreateBoard(c echo.Context, log *log.Logger) error {
+	e := new(Error)
+	e.Body.Code = "add_board_failed"
+	e.Body.Message = "Failed to create new board"
+
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
 	memberId := int(claims["id"].(float64))
 
-	title := strings.TrimSpace(c.FormValue("title"))
+	params := new(UpdateBoardRequest)
+	if err := c.Bind(params); err != nil {
+		return c.JSON(http.StatusBadRequest, e)
+	}
+	cleanBoardData(params)
 
-	board, err := addBoard(memberId, title)
+	board, err := addBoard(memberId, params)
 	if err != nil {
 		log.Error(strings.TrimSpace(err.Error()))
-		return c.JSON(http.StatusBadRequest, map[string]string{
-			"code":    "add_board_failed",
-			"message": "Failed to create new board",
-		})
+		return c.JSON(http.StatusBadRequest, e)
 	}
 
 	return c.JSON(http.StatusCreated, board)
 }
 
+// swagger:route DELETE /api/board/{Board_GID} board board-delete
+//
+// Deletes board by UUID
+//
+// Security:
+// - Bearer: []
+//
+// Responses:
+//   200:
+//   400: error-response
 func DeleteBoard(c echo.Context, log *log.Logger) error {
 	member := c.Get("user").(*jwt.Token)
 	claims := member.Claims.(jwt.MapClaims)
@@ -198,7 +291,7 @@ func retrieveAllBoards(memberGid string) ([]types.Board, error) {
 	return boards, nil
 }
 
-func retrieveBoardByGid(memberGid string, boardGid string) (types.Board, error) {
+func retrieveBoardByGid(boardGid string) (types.Board, error) {
 	board := types.Board{}
 
 	conn, err := pgx.Connect(context.Background(), os.Getenv("PG_URL"))
@@ -216,10 +309,9 @@ func retrieveBoardByGid(memberGid string, boardGid string) (types.Board, error) 
 				(SELECT COUNT(id) FROM board_member WHERE board_id = board.id) AS board_member_count
 			FROM board
 			JOIN board_member ON (board_member.board_id = board.id)
-			JOIN member ON (member.id = board_member.member_id)
-			WHERE member.gid = $1 AND board.gid = $2;
+			WHERE board.gid = $1;
 		`,
-		memberGid, boardGid,
+		boardGid,
 	).Scan(&board.Id, &board.Gid, &board.Title, &board.MemberCount)
 
 	if err != nil {
@@ -228,7 +320,7 @@ func retrieveBoardByGid(memberGid string, boardGid string) (types.Board, error) 
 	return board, nil
 }
 
-func updateBoard(boardGid string, title string) (types.Board, error) {
+func updateBoard(params *UpdateBoardRequest) (types.Board, error) {
 	var board types.Board
 
 	conn, err := pgx.Connect(context.Background(), os.Getenv("PG_URL"))
@@ -251,7 +343,7 @@ func updateBoard(boardGid string, title string) (types.Board, error) {
 				updated = CURRENT_TIMESTAMP
 			WHERE gid = $2;
 		`,
-		title, boardGid,
+		params.Title, params.Board_GID,
 	)
 	if err != nil {
 		return board, err
@@ -267,7 +359,7 @@ func updateBoard(boardGid string, title string) (types.Board, error) {
 			FROM board
 			WHERE gid = $1;
 		`,
-		boardGid,
+		params.Board_GID,
 	).Scan(&board.Id, &board.Gid, &board.Title, &board.MemberCount)
 	if err != nil {
 		return board, err
@@ -281,7 +373,7 @@ func updateBoard(boardGid string, title string) (types.Board, error) {
 	return board, nil
 }
 
-func addBoard(memberId int, title string) (types.Board, error) {
+func addBoard(memberId int, params *UpdateBoardRequest) (types.Board, error) {
 	var board types.Board
 
 	conn, err := pgx.Connect(context.Background(), os.Getenv("PG_URL"))
@@ -303,7 +395,7 @@ func addBoard(memberId int, title string) (types.Board, error) {
 			VALUES ($1)
 			RETURNING id;
 		`,
-		title,
+		params.Title,
 	).Scan(&boardId)
 	if err != nil {
 		return board, err
@@ -375,4 +467,9 @@ func removeBoard(boardGid string) error {
 	}
 
 	return nil
+}
+
+// Removes whitespace from title
+func cleanBoardData(params *UpdateBoardRequest) {
+	params.Title = strings.TrimSpace(params.Title)
 }
